# segment-anything-video

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: commit-lint.yml  install_test_ci.yml  release_to_pypi.yml  test_ci.yml
examples/: image_cv_segautomask.py  image_sahi_slice_predict.py  image_segautomask.py  image_segmanualmask.py  video_segautomask.py  video_segmanualmask.py
examples/gradio_example/: app.py  demo.py
meta_segment/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py
meta_segment/modeling/: __init__.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
meta_segment/utils/: onnx.py
metaseg/: __init__.py  app.py  auto_mask_demo.py  automatic_mask_generator.py  build_sam.py  demo.py  falai_demo.py  falai_predictor.py  manuel_mask_demo.py  mask_predictor.py  sahi_predict.py  sahi_predictor.py  sam_predictor.py
metaseg/generator/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py
metaseg/modeling/: __init__.py  common.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
metaseg/utils/: __init__.py  amg.py  data_utils.py  file.py  file_utils.py  model_file_downloader.py  onnx.py  transforms.py
metaseg/webapp/: __init__.py  app.py  demo.py
scripts/: amg.py  code_format.sh  export_onnx_model.py
tests/: test_image_seg_auto_mask.py
